<?xml version="1.0"?>
<package format="3">
  <name>map_generator</name>
  <version>0.1.0</version>
  <description>Map generator for visualization and planning</description>

  <maintainer email="chanjoon.park@kaist.ac.kr">Chanjoon</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>

  <build_depend>Eigen3</build_depend>
  <exec_depend>Eigen3</exec_depend>
  <build_depend>PCL</build_depend>
  <exec_depend>PCL</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
